# Kitronik-Pico-ZIP96-MicroPython

./: README.md  ZIP96Pico.py
A-Mazing Game Lesson Plans/Lessons Code/: ZIP96Pico - A-Mazing Game - Lesson 02.py  ZIP96Pico - A-Mazing Game - Lesson 03.py  ZIP96Pico - A-Mazing Game - Lesson 04.py  ZIP96Pico - A-Mazing Game - Lesson 05.py  ZIP96Pico - A-Mazing Game - Lesson 06.py  ZIP96Pico - A-Mazing Game - Lesson 07.py  ZIP96Pico - A-Mazing Game - Lesson 08.py  ZIP96Pico - A-Mazing Game - Lesson 09.py  ZIP96Pico - A-Mazing Game - Lesson 11.py
Games/: Snake.py
Games/Run Along, Jump & Jump - C Game/: CMakeLists.txt  PicoWNetworking.c  PicoWNetworking.h  RAJAJ.c  RAJAJ.h  README.md  ZIP96Pico.c  ZIP96Pico.h  lwipopts.h  main-client.c  main-server.c  main-single.c  rajaj-client.uf2  rajaj-server.uf2  rajaj-single.uf2
